--- a/analysis_inference.Rmd
+++ b/analysis_inference.Rmd
@@ -8,52 +8,68 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE)
 ```
 
-```{r message=FALSE, warning=FALSE}
+```{r}
 # Libraries
-library(tidyverse)
-library(haven)
-library(stargazer)
-library(plm)
-library(sandwich)
-library(lmtest)
-library(AER)
+pacman::p_load(tidyverse, haven, estimatr, texreg)
 
 # Parameters
 data_file <- here::here("data/stu_admin_all_with_netvars.Rds")
-```
+newscores_file <- here::here("data/newscores.Rds")
+fac_res_file <- here::here("data/fac_res_prop.csv")
 
-
-Read main data file:
-
-```{r}
 df <-
   data_file %>%
-  read_rds()
-```
-
-
-Reservation students:
-
-```{r}
-df %>%
-  filter(stu_merge == 3) %>% 
+  read_rds() %>% 
+  #filter(stu_merge == 3) %>% 
+  mutate_at(vars(contains("ea_seats_reser")), replace_na, replace = 0) %>% 
+  left_join(read_rds(newscores_file), by = "stdid") %>% 
+  left_join(read_csv(fac_res_file), by = "department_id") %>% 
   mutate(
-    age = 2017 - lubridate::year(b_birthdate)
-  ) %>% 
-  filter(reservation == "Reservation") %>%
-  # lm(
-  #   e_seg_studymate ~ 
-  #     ea_seats_reserved_students_sc + ea_seats_reserved_students_st + ea_seats_reserved_students_obc,
-  #   data = .
-  # ) %>% 
-  ivreg(
-    e_ql_score_perc ~ e_seg_studymate + b_ql_score_perc + gender + age |
-    ea_seats_reserved_students_sc + ea_seats_reserved_students_st + ea_seats_reserved_students_obc + b_ql_score_perc + gender + age,
-    data = .
+    female = gender - 1,
+    age = 2017 - lubridate::year(b_birthdate),
+    reservation = dplyr::recode(reservation, "Non-reservation" = 0L, "Reservation" = 1L, .default = NA_integer_),
+    stu_res_official = (ea_seats_reserved_students_obc + ea_seats_reserved_students_sc + ea_seats_reserved_students_st) / 100,
+    fac_res_official = (ea_seats_reserved_faculty_obc + ea_seats_reserved_faculty_sc + ea_seats_reserved_faculty_st) / 100,
+    z_seg_g1 = if_else(grade == 2, b_seg_new, NA_real_),
+    z_seg_g2 = if_else(grade == 2, e_seg_new, NA_real_),
+    z_seg_g3 = if_else(grade == 4, b_seg_new, NA_real_),
+    z_seg_g4 = if_else(grade == 4, e_seg_new, NA_real_)
+  ) 
+
+df <-
+  df %>% 
+  left_join(
+    df %>% 
+      group_by(department_id) %>% 
+      summarize(stu_res_actual = mean(reservation, na.rm = TRUE)),
+    by = "department_id"
   ) %>%
-  coeftest(vcov = vcovHC, type = "HC1")
+  mutate_at(
+    vars(starts_with(c("z_homophily", "z_reciprocity", "z_transitivity", "z_n_stud", "stu_res_", "fac_res_", "z_seg_g")), age),
+    ~ scale(.) %>% as.vector
+  ) %>% 
+  left_join(
+    df %>%
+      select(classid, stdid, b_math_g1_score, b_math_g3_score, b_physics_g1_score, b_physics_g3_score, b_ct_score, b_ql_score, b_rr_score) %>% 
+      group_by(classid) %>% 
+      mutate_at(vars(ends_with("score")), ~ scale(.) %>% pnorm()) %>% 
+      ungroup() %>% 
+      transmute(
+        stdid,
+        b_score =
+          pmap_dbl(
+            select(., ends_with("score")),
+            ~ mean(c(...), na.rm = TRUE)
+          )
+      ),
+    by = "stdid"
+  ) %>% 
+  mutate(
+    ea_scstcell_yn = ea_staff_strength_scsctcell,
+    ea_scstcell_yn = if_else(ea_scstcell_yn > 0 & !is.na(ea_scstcell_yn), 1, ea_scstcell_yn) %>% as.integer()
+  )
 ```
 
