--- a/experiment.Rmd
+++ b/experiment.Rmd
@@ -91,8 +91,6 @@ seg_scores <-
     ~ scale(.) %>% as.vector
   ) %>% 
   janitor::remove_empty()
-
-seg_scores %>% summary()
 ```
 
 
@@ -108,7 +106,7 @@ seg_scores %>% summary()
 # Check 1
 lm1 <-
   seg_scores %>% 
-  lm_robust(b_seg_new ~ female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+  lm_robust(stu_diversity ~ female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
 
 summary(lm1)
 tidy(lm1) %>% select(term, estimate, p.value) %>% mutate_at(vars(estimate, p.value), ~ round(., digits = 2))
@@ -122,35 +120,55 @@ tidy(lm1) %>% select(term, estimate, p.value) %>% mutate_at(vars(estimate, p.val
 lm1 <-
   seg_scores %>%
   filter(reservation == 1) %>% 
-  lm_robust(e_ct_score_perc ~ b_seg_new + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+  lm_robust(e_ct_score_perc ~ stu_diversity + b_ct_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
 
 lm2 <-
   seg_scores %>%
   filter(reservation == 0) %>% 
-  lm_robust(e_ct_score_perc ~ b_seg_new + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+  lm_robust(e_ct_score_perc ~ stu_diversity + b_ct_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+
+lm3 <-
+  seg_scores %>%
+  filter(reservation == 1) %>% 
+  lm_robust(e_ql_score_perc ~ stu_diversity + b_ql_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+
+lm4 <-
+  seg_scores %>%
+  filter(reservation == 0) %>% 
+  lm_robust(e_ql_score_perc ~ stu_diversity + b_ql_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+
+lm5 <-
+  seg_scores %>%
+  filter(reservation == 1) %>% 
+  lm_robust(e_rr_score_perc ~ stu_diversity + b_rr_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+
+lm6 <-
+  seg_scores %>%
+  filter(reservation == 0) %>% 
+  lm_robust(e_rr_score_perc ~ stu_diversity + b_rr_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
 
 lm7 <-
   seg_scores %>%
   filter(reservation == 1) %>% 
-  lm_robust(e_math_g3_score_perc ~ b_seg_new + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+  lm_robust(e_math_g3_score_perc ~ stu_diversity + b_math_g1_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
 
 lm8 <-
   seg_scores %>%
   filter(reservation == 0) %>% 
-  lm_robust(e_math_g3_score_perc ~ b_seg_new + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+  lm_robust(e_math_g3_score_perc ~ stu_diversity + b_math_g1_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
 
 lm9 <-
   seg_scores %>%
   filter(reservation == 1) %>% 
-  lm_robust(e_physics_g3_score_perc ~ b_seg_new + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+  lm_robust(e_physics_g3_score_perc ~ stu_diversity + b_physics_g1_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
 
 lm10 <-
   seg_scores %>%
   filter(reservation == 0) %>% 
-  lm_robust(e_physics_g3_score_perc ~ b_seg_new + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
+  lm_robust(e_physics_g3_score_perc ~ stu_diversity + b_physics_g1_score_perc + female + age + ses + hs_private + mother_college + father_college, data = ., fixed_effects = ~ classid, clusters = classid, se_type = "stata")
 
 
-knitreg(list(lm1, lm2, lm7, lm8, lm9, lm10), custom.note = "%stars \n All models control for department fixed effects. \n Standard errors clustered at department level.", stars = c(0.01, 0.05, 0.1), include.ci = FALSE, custom.model.names = c("CT-Res", "CT-NRes", "Math-Res", "Math-NRes", "Physics-Res", "Physics-NRes"))
+knitreg(list(lm1, lm2, lm7, lm8, lm9, lm10), custom.note = "%stars \n All models control for department fixed effects. \n Standard errors clustered at department level.", stars = c(0.01, 0.05, 0.1), include.ci = FALSE, custom.model.names = c("CT-Res", "CT-NRes", "CT-Res", "CT-NRes", "CT-Res", "CT-NRes", "Math-Res", "Math-NRes", "Physics-Res", "Physics-NRes"))
 ```
 
 ## Figures for non-linearity
@@ -160,7 +178,7 @@ seg_scores %>%
   mutate(
     reservation = factor(reservation, labels = c("Non-reservation students", "Reservation students"))
   ) %>%
-  ggplot(aes(b_seg_new, e_ct_score_perc)) +
+  ggplot(aes(stu_diversity, e_ct_score_perc)) +
   geom_smooth(method = "loess") +
   facet_wrap(vars(reservation)) +
   hrbrthemes::theme_ipsum() +
